# knowledge_agent

./: .env.example  .gitignore  AGENTS.md  Makefile  SESSION.md  alembic.ini  docker-compose.yml  knowledge_engine_architecture.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/github/: SKILL.md
.opencode/skills/vibe-coding/: SKILL.md
src/knowledge_engine/: index.py
src/knowledge_engine/cli/: __init__.py  main.py
src/knowledge_engine/connectors/: __init__.py  base.py  sync_service.py  telegram.py  url.py
src/knowledge_engine/db/: __init__.py  config.py  engine.py  repository.py  session.py
src/knowledge_engine/db/migrations/: env.py  script.py.mako
src/knowledge_engine/extractors/: __init__.py  graph.py  knowledge.py
src/knowledge_engine/models/: __init__.py  base.py  document.py  entity.py  knowledge_unit.py  relation.py  source.py
src/knowledge_engine/retrieval/: __init__.py  context_builder.py  graph_expander.py  service.py  vector.py
tests/: conftest.py  test_cli.py  test_connectors.py  test_index.py  test_models.py  test_repository.py
